--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,10 @@
             "assets": [
               "src/favicon.ico",
               "src/assets"
-            ] 
+            ],
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css"
+            ]
 
 
           },
@@ -83,6 +86,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
