--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular/router": "^15.2.10",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
